welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value ||
	if ( (90<n && n<110) || ( 190<n && n<210)) || (90 == n) { return true}
                                                   ^