welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if ( (90<n && n<110) || ( 190<n && n<210)) || (90 == n) { return true}
	else {return false}
}
